--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -100,14 +100,10 @@ a {
     }
 
     @include md {
-        padding-right: 1em;
-        padding-left: 1em;
+        padding-right: 1.2em;
+        padding-left: 1.2em;
     }
 
-    @include sm {
-        padding-right: 0.8em;
-        padding-left: 0.8em;
-    }
 }
 
 @mixin marginAuto() {
