--- a/src/styles/document.scss
+++ b/src/styles/document.scss
@@ -70,6 +70,10 @@ article {
     display: flex;
     margin: 60px 0 120px 0;
 
+    @include md {
+        margin: 30px 0 60px 0;
+    }
+
     code,
     .hljs {
         font-family: 'Roboto Mono', monospace;
@@ -97,7 +101,7 @@ article {
         min-width: 150px;
 
         @include md {
-            margin-bottom: 1em;
+            margin-bottom: 2em;
         }
 
         ul {
